[package]
name = "glob-sl"
version = "0.4.2"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/brmmm3/glob-sl"
repository = "https://github.com/brmmm3/glob-sl"
documentation = "https://docs.rs/glob-sl/0.4.2"
description = """
Support for matching file paths against Unix shell style patterns.
"""
categories = ["filesystem"]

[dev-dependencies]
tempdir = "0.3"
doc-comment = "0.3"
